@@ -1,5 +1,6 @@
 Changes for 1.1beta6:
 
+ - improved proc.num for Linux, added parameter 'comm' (Eugene)
  - fixed two different units in two graph axes (Alexei)
  - renamed latestalarms.php and alerts.php (Alexei)
  - fix crash in processing of autoregistration (Alexei)
